# Altomatic

./: .flake8  .gitignore  Altomatic.spec  BUGS.txt  README.md  babel.cfg  build_installer.py  launch.bat  pyproject.toml  pyside6_migration_roadmap.md  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
scripts/: extract_strings.py  generate_stylesheet.py  init_language.py  list_modules.py
src/altomatic/: __init__.py  __main__.py  app.py  models.py  prompts.py
src/altomatic/config/: __init__.py  manager.py
src/altomatic/core/: processor.py
src/altomatic/data/: openrouter_models.json
src/altomatic/resources/: __init__.py
src/altomatic/services/: __init__.py  ai.py  openrouter_catalog.py  provider_health.py
src/altomatic/ui/: __init__.py  _shared.py  components.py  dragdrop.py  results.py  themes.py  ui_toolkit.py
src/altomatic/utils/: __init__.py  images.py  proxy.py  text.py
src/app/: theming.py  worker.py
src/app/resources/: design_tokens.py  settings.json
src/app/services/: settings_service.py
src/app/viewmodels/: about_viewmodel.py  advanced_viewmodel.py  appearance_viewmodel.py  automation_viewmodel.py  base_viewmodel.py  context_viewmodel.py  footer_viewmodel.py  header_viewmodel.py  input_viewmodel.py  log_viewmodel.py  main_viewmodel.py  maintenance_viewmodel.py  network_viewmodel.py  (+8 more)
src/core/: __init__.py  __main__.py  models.py  prompts.py
tests/: test_app_state.py  test_models.py  test_ocr.py  test_text_utils.py  test_tooltip.py
tests/core/: test_processor.py
tests/integration/: test_processing_pipeline.py
(+59 files in other folders)
